# sensor_server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/rules/: code-style.md  comments.md
backend/: main.py
client/: client.py  plot_client.py
src/sensor_server/: __init__.py  cli.py
src/sensor_server/api/: __init__.py  app.py  dependencies.py  websocket.py
src/sensor_server/api/routes/: __init__.py  arrays.py  control.py  health.py
src/sensor_server/core/: __init__.py  processing.py  storage.py  streaming.py
tests/: conftest.py  test_http_endpoints.py  test_websocket.py
tests/unit/: test_processing.py  test_storage.py  test_streaming.py
